<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".client.ClientEditActivity">

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="625dp" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="20dp" />

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="118dp" />

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="217dp" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="313dp" />

    <EditText
        android:id="@+id/namePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="380dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="53dp" />

    <EditText
        android:id="@+id/addressPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="380dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="152dp" />

    <EditText
        android:id="@+id/emailPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="380dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="343dp" />

    <EditText
        android:id="@+id/phonePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="249dp" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_button"
        tools:layout_editor_absoluteX="200dp"
        tools:layout_editor_absoluteY="621dp" />

</androidx.constraintlayout.widget.ConstraintLayout>